--- a/team.html
+++ b/team.html
@@ -17,6 +17,9 @@
     
     <h1>TEAM PAGE</h1>
     <p>pretty empty here...</p>
+    <p>pretty empty here...</p>
+    <p>pretty empty here...</p>
+    <p>pretty empty here...</p>
     
 </body>
 </html>
