--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 <body>
 
     <ul>
-      <li><a class="active" href="/index.html">Home</a></li>
-      <li><a href="/team.html">Team</a></li>
-      <li><a href="/projects.html">Projects</a></li>
+      <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="team.html">Team</a></li>
+      <li><a href="projects.html">Projects</a></li>
     </ul>
     
     <h1>HOME PAGE</h1>
