--- a/index.html
+++ b/index.html
@@ -8,13 +8,26 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-
-    <ul>
-      <li><a class="active" href="index.html">Home</a></li>
-      <li><a href="team.html">Team</a></li>
-      <li><a href="projects.html">Projects</a></li>
-    </ul>
-    
+  <div class="navbar">
+    <a href="#home">Home</a>
+    <div class="dropdown" style="float:right">
+      <button class="dropbtn">Team</button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+    <div class="dropdown" style="float:right">
+      <button class="dropbtn">Projects</button>
+      <div class="dropdown-content">
+        <a href="#">Link 1</a>
+        <a href="#">Link 2</a>
+        <a href="#">Link 3</a>
+      </div>
+    </div>
+  </div>
+  
     <h1>HOME PAGE</h1>
     <p>pretty empty here...</p>
     
