--- a/team.html
+++ b/team.html
@@ -10,9 +10,9 @@
 <body>
 
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a class="active" href="team.html">Team</a></li>
-      <li><a href="projects.html">Projects</a></li>
+      <li><a href="/index.html">Home</a></li>
+      <li><a class="active" href="/team.html">Team</a></li>
+      <li><a href="/projects.html">Projects</a></li>
     </ul>
     
     <h1>TEAM PAGE</h1>
