--- a/index.html
+++ b/index.html
@@ -9,25 +9,29 @@
 </head>
 <body>
   <div class="navbar">
-    <a href="#home">Home</a>
-    <div class="dropdown" style="float:right">
-      <button class="dropbtn">Team</button>
+    <img src="images/logo.png" style="height:40px;float:left;margin-left:1%;margin-top:5px">
+    <a href="#home" class="navbar-font" style="font-weight:600;font-size:larger">Team P1G5</a>
+    <a class="navbar-font" style="float:right">CONTACT</a>
+    <div class="dropdown navbar-font" style="float:right">
+      <button class="dropbtn">TEAM</button>
       <div class="dropdown-content">
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
       </div>
     </div>
-    <div class="dropdown" style="float:right">
-      <button class="dropbtn">Projects</button>
+    <div class="dropdown navbar-font" style="float:right">
+      <button class="dropbtn">PROJECTS</button>
       <div class="dropdown-content">
         <a href="#">Link 1</a>
         <a href="#">Link 2</a>
         <a href="#">Link 3</a>
       </div>
     </div>
+    
   </div>
   
+    <img src=""
     <h1>HOME PAGE</h1>
     <p>pretty empty here...</p>
     
