--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
 <body>
   <div class="navbar">
     <img src="images/logo.png" style="height:40px;float:left;margin-left:1%;margin-top:5px">
-    <a href="#home" class="navbar-font" style="font-weight:600;font-size:larger">Team P1G5</a>
+    <a href="index.html" class="navbar-font" style="font-weight:600;font-size:22px">Team P1G5</a>
     <a class="navbar-font" style="float:right">CONTACT</a>
     <div class="dropdown navbar-font" style="float:right">
       <button class="dropbtn">TEAM</button>
       <div class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
-        <a href="#">Link 3</a>
+        <a href="team_adrian.html">Adrian</a>
+        <a href="team_kallie.html">Kallie</a>
+        <a href="team_daniel.html">Daniel</a>
+        <a href="team_jeffrey.html">Jeffrey</a>
+        <a href="team_pranav.html">Pranav</a>
+        <a href="team_david.html">David</a>
       </div>
     </div>
     <div class="dropdown navbar-font" style="float:right">
@@ -28,12 +31,34 @@
         <a href="#">Link 3</a>
       </div>
     </div>
-    
   </div>
   
-    <img src=""
-    <h1>HOME PAGE</h1>
-    <p>pretty empty here...</p>
+  <img src="images/home-image.png" style="max-width:100%;height:auto;margin-bottom:20px;">
+  
+  <div class="body-box" style="padding-bottom:0.3vw;">
+    <h1 class="header"><a href="projects.html" class="header">PROJECTS ></a></h1>
+    <div class="flex-container">
+      <div class="content-box" style="background-image:url('images/project1.png')"></div>
+      <div class="content-box" style="background-image:url('images/project2.png')"></div>
+      <div class="content-box" style="background-image:url('images/project3.png')"></div>
+      <div class="content-box" style="background-image:url('images/project1.png')"></div>
+    </div>
+  </div>
+
+  <div class="body-box" style="max-height:15vw">
+    <h1 class="header">MEET THE TEAM</h1>
+    <div class="flex-container">
+      <div class="content-box">
+        <p style="font-size:1.7vw">Learn more about each of our team members here!</p>
+      </div>
+      <a href="team_adrian.html"><img src="images/adrian_cr.jpg" class="icon"></a>
+      <a href="team_kallie.html"><img src="images/kallie_cr.jpg" class="icon"></a>
+      <a href="team_daniel.html"><img src="images/daniel_cr.jpg" class="icon"></a>
+      <a href="team_jeffrey.html"><img src="images/jeffrey_cr.jpg" class="icon"></a>
+      <a href="team_pranav.html"><img src="images/pranav_cr.jpg" class="icon"></a>
+      <a href="team_david.html"><img src="images/david_cr.jpg" class="icon"></a>
+    </div>
+  </div>
     
 </body>
 </html>
