edit db, link to new team page
change some database entries, as well as added a link to the new team page

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
   </div>
 
   <div class="body-box" style="max-height:15vw">
-    <h1 class="header">MEET THE TEAM</h1>
+    <h1 class="header"><a href="dbTest.php" class="header">MEET THE TEAM</a></h1>
     <div class="flex-container">
       <div class="content-box">
         <p style="font-size:1.7vw">Learn more about each of our team members here!</p>
