--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <div class="dropdown navbar-font" style="float:right">
       <button class="dropbtn">PROJECTS</button>
       <div class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
+        <a href="proj_maze_game.html">Maze Game</a>
+        <a href="proj_ascii_art.html">ASCII Art</a>
         <a href="#">Link 3</a>
       </div>
     </div>
@@ -38,15 +38,15 @@
   <div class="body-box" style="padding-bottom:0.3vw;">
     <h1 class="header"><a href="projects.html" class="header">PROJECTS ></a></h1>
     <div class="flex-container">
-      <div class="content-box" style="background-image:url('images/project1.png')"></div>
-      <div class="content-box" style="background-image:url('images/project2.png')"></div>
+      <a href="proj_maze_game.html"><div class="content-box" style="background-image:url('images/maze_game_thumb.png')"></div></a>
+      <a href="proj_ascii_art.html"><div class="content-box" style="background-image:url('images/ascii_art_thumb.png')"></div></a>
       <div class="content-box" style="background-image:url('images/project3.png')"></div>
       <div class="content-box" style="background-image:url('images/project1.png')"></div>
     </div>
   </div>
 
-  <div class="body-box" style="max-height:15vw">
-    <h1 class="header"><a href="dbTest.php" class="header">MEET THE TEAM</a></h1>
+  <div class="body-box" style="max-height:17vw">
+    <h1 class="header">MEET THE TEAM</h1>
     <div class="flex-container">
       <div class="content-box">
         <p style="font-size:1.7vw">Learn more about each of our team members here!</p>
