--- a/team_adrian.html
+++ b/team_adrian.html
@@ -26,8 +26,8 @@
     <div class="dropdown navbar-font" style="float:right">
       <button class="dropbtn">PROJECTS</button>
       <div class="dropdown-content">
-        <a href="#">Link 1</a>
-        <a href="#">Link 2</a>
+        <a href="proj_maze_game.html">Maze Game</a>
+        <a href="proj_ascii_art.html">ASCII Art</a>
         <a href="#">Link 3</a>
       </div>
     </div>
